--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,5 +30,6 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
+        file: ./GitHubBuildTest/Dockerfile
         push: true
         tags: rocker/drd:latest
